--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
-
 spring.datasource.url=jdbc:mysql://localhost:3306/mywallet?createDatabaseIfNotExist=true
 spring.datasource.username=root
 spring.datasource.password=password
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto=update
-server.servlet.contextPath=/api
+
+api.security.token.secret=${JWT_SECRET:my-secret-key}
